# noteko

./: CONTRIBUTING.md  LICENCE  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/converters/: mod.rs  regex_patterns.rs  txt_converter.rs
src/lib/components/: NoteEditor.svelte  RecentFiles.svelte  Toolbar.svelte
src/lib/components/modals/: BaseModal.svelte  ConfirmModal.svelte  SaveAsModal.svelte
src/lib/services/: fileService.ts  modalService.ts
src/lib/stores/: appState.ts  notesStore.ts
src/lib/tauri/: events.ts
src/lib/utils/: editorUtils.ts  fileUtils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
